deployment/kubernetes/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-api
  namespace: restaurant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restaurant-api
  template:
    metadata:
      labels:
        app: restaurant-api
    spec:
      containers:
        - name: backend-container
          image: public.ecr.aws/u3m8u0c4/ce5-group2-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8888

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: restaurant
  labels:
    app: restaurant-api
spec:
  type: ClusterIP
  selector:
    app: restaurant-api
  ports:
    - name: app-api
      protocol: TCP
      port: 8888
      targetPort: 8888
