deployment/kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-app
  namespace: restaurant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restaurant-app
  template:
    metadata:
      labels:
        app: restaurant-app
    spec:
      containers:
        - name: frontend-container
          image: public.ecr.aws/u3m8u0c4/ce5-group2-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: restaurant
  labels:
    app: restaurant-app
spec:
  type: ClusterIP
  selector:
    app: restaurant-app
  ports:
    - name: webpage
      protocol: TCP
      port: 7778
      targetPort: 80
