deployment/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-restaurant
  namespace: restaurant
  annotations:
    cert-manager.io/issuer: "letsencrypt"
spec: 
  ingressClassName: nginx
  tls:
    - hosts:
        - ce5-group2-food.sctp-sandbox.com
      secretName: restaurant-tls
  rules:
  - host: ce5-group2-food.sctp-sandbox.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 7778
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 8888
